--- a/package.json
+++ b/package.json
@@ -14,61 +14,53 @@
     },
     "author": "D-Jukie",
     "dependencies": {
-        "@distube/ytdl-core": "^4.13.2",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@miraipr0ject/assets": "^1.0.9",
-        "adm-zip": "^0.5.10",
-        "axios": "",
-        "body-parser": "",
-        "caesar-salad": "",
-        "canvas": "^2.11.2",
-        "cfonts": "^3.2.0",
-        "chalk": "^4.1.2",
-        "chalkercli": "^1.6.4",
-        "cheerio": "^1.0.0-rc.12",
-        "child_process": "",
-        "cors": "^2.8.5",
-        "crypto": "",
-        "eval": "",
-        "express": "^4.18.2",
-        "express-rate-limit": "^7.1.4",
-        "extract-zip": "",
-        "figlet": "",
-        "fluent-ffmpeg": "^2.1.2",
-        "form-data": "^4.0.0",
-        "fs-extra": "^11.1.1",
-        "gifencoder": "^2.0.1",
-        "gtts": "^0.2.1",
-        "helmet": "^7.1.0",
-        "image-downloader": "^4.3.0",
-        "imgur": "^1.0.2",
-        "ipware": "^2.0.0",
-        "javascript-obfuscator": "^4.1.0",
-        "jimp": "",
-        "map": "^1.0.1",
-        "minimist": "",
-        "moment": "^2.29.1",
-        "moment-timezone": "",
-        "ms": "",
-        "node-fetch": "^3.3.2",
-        "node-superfetch": "^0.3.3",
-        "npmlog": "",
-        "openai": "^3.3.0",
-        "pastebin-api": "^7.0.0",
-        "path": "",
-        "readline": "",
-        "request": "",
-        "semver": "",
-        "sequelize": "",
-        "set-cookie": "^0.0.4",
-        "sqlite3": "",
-        "string-similarity": "^4.0.4",
-        "tinyurl": "^1.1.7",
-        "totp-generator": "",
-        "tslib": "^2.6.0",
-        "vtuanhihi": "^2.0.6",
-        "wikijs": "^6.4.1",
-        "youtube-search-api": "^1.2.1",
-        "ytdl-core": "^4.11.5"
+  "@distube/ytdl-core": "^4.13.2",
+  "@ffmpeg-installer/ffmpeg": "^1.1.0",
+  "@miraipr0ject/assets": "^1.0.9",
+  "adm-zip": "^0.5.10",
+  "axios": "^1.6.8",
+  "body-parser": "^1.20.2",
+  "caesar-salad": "^1.0.7",
+  "canvas": "^2.11.2",
+  "cfonts": "^3.2.0",
+  "chalk": "^4.1.2",
+  "chalkercli": "^1.6.4",
+  "cheerio": "^1.0.0-rc.12",
+  "cors": "^2.8.5",
+  "crypto": "^1.0.1",
+  "express": "^4.18.2",
+  "express-rate-limit": "^7.1.4",
+  "fluent-ffmpeg": "^2.1.2",
+  "form-data": "^4.0.0",
+  "fs-extra": "^11.1.1",
+  "gifencoder": "^2.0.1",
+  "gtts": "^0.2.1",
+  "helmet": "^7.1.0",
+  "image-downloader": "^4.3.0",
+  "imgur": "^1.0.2",
+  "ipware": "^2.0.0",
+  "javascript-obfuscator": "^4.1.0",
+  "jimp": "^0.22.10",
+  "minimist": "^1.2.8",
+  "moment": "^2.29.4",
+  "moment-timezone": "^0.5.45",
+  "ms": "^2.1.3",
+  "node-fetch": "^3.3.2",
+  "node-superfetch": "^0.3.3",
+  "npmlog": "^7.0.1",
+  "openai": "^4.20.1",
+  "pastebin-api": "^7.0.0",
+  "path": "^0.12.7",
+  "readline": "^1.3.0",
+  "request": "^2.88.2",
+  "semver": "^7.5.4",
+  "sequelize": "^6.37.1",
+  "set-cookie": "^0.0.4",
+  "sqlite3": "^5.1.7",
+  "string-similarity": "^4.0.4",
+  "tinyurl": "^1.1.7",
+  "tslib": "^2.6.2",
+  "wikijs": "^6.4.1",
+  "youtube-search-api": "^1.2.1",
+  "ytdl-core": "^4.11.5"
     }
-}
